--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/core": "6.0.0",
-    "@angular/forms": "6.0.0",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
-    "@angular/router": "6.0.0",
-    "core-js": "2.5.5",
-    "rxjs": "6.1.0",
-    "src": "^1.1.2",
-    "tslib": "2.6.2",
-    "zone.js": "0.8.26"
+    "@angular/animations": "^17.2.4",
+    "@angular/common": "^17.2.4",
+    "@angular/compiler": "^17.2.4",
+    "@angular/core": "^17.2.4",
+    "@angular/forms": "^17.2.4",
+    "@angular/platform-browser": "^17.2.4",
+    "@angular/platform-browser-dynamic": "^17.2.4",
+    "@angular/router": "^17.2.4",
+    "@popperjs/core": "^2.11.8",
+    "@types/jasmine": "^5.1.4",
+    "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
+    "ngx-daterangepicker-bootstrap": "^17.5.1",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.4"
   },
   "scripts": {
     "ng": "ng",
