5 files modified, 1 added, 2 deleted

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-bootstrap-4-starter",
+  "name": "# angular-17-bootstrap-5-poligon",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
