--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "# angular-17-bootstrap-5-poligon",
+  "name": "angular-17-bootstrap-5-poligon",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.2.4",
-    "@angular/common": "^17.2.4",
-    "@angular/compiler": "^17.2.4",
-    "@angular/core": "^17.2.4",
-    "@angular/forms": "^17.2.4",
-    "@angular/platform-browser": "^17.2.4",
-    "@angular/platform-browser-dynamic": "^17.2.4",
-    "@angular/router": "^17.2.4",
+    "@angular/animations": "16.2.2",
+    "@angular/common": "16.2.2",
+    "@angular/compiler": "16.2.2",
+    "@angular/core": "16.2.2",
+    "@angular/forms": "16.2.2",
+    "@angular/platform-browser": "16.2.2",
+    "@angular/platform-browser-dynamic": "16.2.2",
+    "@angular/router": "16.2.2",
     "@popperjs/core": "^2.11.8",
-    "@types/jasmine": "^5.1.4",
-    "bootstrap": "^5.3.3",
-    "dayjs": "^1.11.10",
-    "ngx-daterangepicker-bootstrap": "^17.5.1",
-    "rxjs": "^7.8.1",
-    "tslib": "^2.6.2",
-    "zone.js": "^0.14.4"
+    "@types/jasmine": "4.0.3",
+    "bootstrap": "^5.3.1",
+    "dayjs": "^1.11.9",
+    "ngx-daterangepicker-bootstrap": "^16.5.0",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "zone.js": "0.13.1"
   },
   "scripts": {
     "ng": "ng",
