--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jasmine": "4.0.3",
     "bootstrap": "^5.3.1",
     "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
     "ngx-daterangepicker-bootstrap": "^16.5.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
